Fixes non-visible Gap between header and home-body on tablet-up
no-ref-tme-header-hotfix

--- a/source/_patterns/20-molecules/sticky-container/sticky-container.scss
+++ b/source/_patterns/20-molecules/sticky-container/sticky-container.scss
@@ -71,7 +71,7 @@
   height: 112px;
 
   @include tablet-up {
-    height: 80px;
+    height: 72px;
   }
 }
 
